# htool

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: cli.h  common.h  container.h  encryption.h  fat.h  file.h
src/: cli.cpp  container.cpp  encryption.cpp  fat.cpp  file.cpp  htool.cpp
tests/: test_aes.cpp  test_container.cpp  test_hash.cpp  test_rand.cpp
toolchains/: mingw64.cmake
